# test2

./: .gitignore  CMakeLists.txt  Test2a.sln  default.nix  derivation.nix  lgtm.yaml  lgtm.yml
.github/: pull_request_template.md
.github/workflows/: pr-workflow.yml  release-workflow.yml
Test2a/: Test2a.cpp  Test2a.vcxproj  Test2a.vcxproj.filters
docs/: CMakeLists.txt
examples/: README.rst
examples/simple/: CMakeLists.txt  default.nix  main.c
include/test2/: Test2a.h
src/: Test2a.c
